Add modal to display final score.

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="../public/style.css">
 </head>
 <body>
+  <div id="modal">
+    <div class="modal-content">
+      <!-- <span id="close-button" onClick="close(event)">&times;</span> -->
+      <p id="final-score"></p>
+    </div>
+  </div>
   <section id="score-and-speed">
     <p id="score">
       0
@@ -14,13 +20,16 @@
     <div class="speed">
       <input type="range" min="1" max="100" value="50" class="slider" id="speedRange" onChange="speedHandler(event)">
       <div class="difficulty-meter"></div>
-      <p>SPEED</p>
+      <p>DIFFICULTY</p>
       <!-- <div id="currentSpeed">30</div> -->
     </div>
     <div class="buttons">
       <button onClick="startGame()">START GAME</button>
-      <button onClick="stopGame()">STOP</button>
-      <progress  value="0" max="10" id="countdown"></progress>
+      <!-- <button onClick="stopGame()">STOP</button> -->
+    </div>
+    <div class="countdown-container">
+      <progress value="0" max="3" id="countdown"></progress>
+      <div id="countdown-timer">3</div>
     </div>
   </section>
   <section id="bubble-zone">
