--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,64 @@
 :root {
   --speed: 5s;
 }
+html {
+  100%;
+}
 
 body {
   margin: 0;
   height: 100vh;
   overflow-y: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(yellow, orange, red, purple);
 }
+
+#modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0,0,0,0.4);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 1.2em;
+  width: 70%;
+  border: 2px solid lightgrey;
+  border-radius: 5px;
+  box-shadow: 0px 2px 47px -14px rgba(0,0,0,0.75);
+}
+
+#close-button {
+  align-self: flex-end;
+  width: 30px;
+  cursor: pointer;
+}
+
+#final-score {
+  align-self: center;
+  font-size: 2em;
+}
+/* @media only screen and (max-width: 400px) {
+  body {
+    background-image: linear-gradient(yellow, red, purple);
+  }
+} */
+
+/* Tablet Styles */
+/* @media only screen and (max-width: 960px) {
+  body {
+
+  }
+} */
 
 #score-and-speed {
   box-shadow: 0px 2px 47px -14px rgba(0,0,0,0.75);
@@ -27,8 +79,19 @@ body {
   color: red;
 }
 
+.countdown-container {
+  display: flex;
+  align-items: center;
+}
+
 #countdown {
   font-size: 1.2em;
+  color: red;
+}
+
+#countdown-timer {
+  font-size: 1.2em;
+  margin: 1em;
   color: red;
 }
 
@@ -68,12 +131,12 @@ button:focus {
   outline: 1px solid #fff;
 }
 
-#bubble-zone {
-  background-image: linear-gradient(yellow, red, purple);
-
-  height: 100vh;
-  position: inherit;
-}
+/* #bubble-zone { */
+  /* background-image: linear-gradient(yellow, red, purple);
+  width: 100%;
+  height: 100%;
+  position: inherit; */
+/* } */
 
 .bubble {
   border-radius: 50%;
