Finish up basic functionality. Add note about mobile.

--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Dot Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../public/style.css">
 </head>
 <body>
@@ -28,13 +30,14 @@
       <!-- <button onClick="stopGame()">STOP</button> -->
     </div>
     <div class="countdown-container">
-      <progress value="0" max="3" id="countdown"></progress>
-      <div id="countdown-timer">3</div>
+      <progress value="0" max="10" id="countdown"></progress>
+      <div id="countdown-timer">10</div>
     </div>
   </section>
   <section id="bubble-zone">
     <img class="cloud-1" src="../public/cloud1.svg" alt="Cloud"/>
     <img class="cloud-2" src="../public/cloud1.svg" alt="Cloud"/>
+    <p class="mobile-disclaimer">Mobile version coming soon! 🙌 </p>
   </section>
   <script src="../public/index.js"></script>
 </body>
