--- a/public/style.css
+++ b/public/style.css
@@ -2,27 +2,33 @@
   --speed: 5s;
 }
 html {
-  100%;
+  width: 100%;
+  height: 100vh;
+  font-family: 'Aleo', serif;
+  /* -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover; */
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-image: linear-gradient(yellow, orange, red, purple);
+   overflow-y: hidden;
 }
 
 body {
   margin: 0;
   height: 100vh;
-  overflow-y: hidden;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: linear-gradient(yellow, orange, red, purple);
+  /* overflow-y: hidden; */
 }
 
 #modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
@@ -47,22 +53,11 @@ body {
   align-self: center;
   font-size: 2em;
 }
-/* @media only screen and (max-width: 400px) {
-  body {
-    background-image: linear-gradient(yellow, red, purple);
-  }
-} */
-
-/* Tablet Styles */
-/* @media only screen and (max-width: 960px) {
-  body {
-
-  }
-} */
 
 #score-and-speed {
   box-shadow: 0px 2px 47px -14px rgba(0,0,0,0.75);
   position: fixed;
+  z-index: 100;
   background-color: white;
   top: 0;
   left: 0;
@@ -119,6 +114,7 @@ body {
 }
 
 button {
+  font-family: 'Aleo', serif;
   border-radius: 5px;
   padding: 1em;
   color: white;
@@ -131,12 +127,11 @@ button:focus {
   outline: 1px solid #fff;
 }
 
-/* #bubble-zone { */
-  /* background-image: linear-gradient(yellow, red, purple);
+#bubble-zone {
+  position: relative;
   width: 100%;
   height: 100%;
-  position: inherit; */
-/* } */
+}
 
 .bubble {
   border-radius: 50%;
@@ -144,18 +139,51 @@ button:focus {
 }
 
 .cloud-1 {
-  position: relative;
-  top: 400px;
-  left: 100px;
-  width: 400px;
+  position: absolute;
+  top: 45%;
+  left: 15%;
+  width: 30%;
   opacity: 0.3;
 }
 
 .cloud-2 {
-  position: relative;
-  top: 300px;
-  left: 350px;
-  width: 500px;
+  position: absolute;
+  top: 60%;
+  left: 45%;
+  width: 50%;
   opacity: 0.5;
   transform: rotate(180deg);
 }
+
+.mobile-disclaimer {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .mobile-disclaimer {
+    display: block;
+    position: absolute;
+    top: 70%;
+    left: 35%;
+    width: 30%;
+    background-color: white;
+    padding: 1em;
+    border-radius: 5px;
+    opacity: 0.8;
+    font-size: 1.2em;
+  }
+}
+
+/* @keyframes bubbleMove {
+  0%   { transform: translateY(0vh); }
+  100% { transform: translateY(100vh) }
+}
+@media only screen and (max-width: 600px) {
+  .bubble {
+    display: block;
+    z-index: 2;
+    border-radius: 50%;
+    position: absolute;
+    animation: bubbleMove 5s linear;
+  }
+} */
