Fix styling of mobile disclaimer.

--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
   <section id="bubble-zone">
     <img class="cloud-1" src="../public/cloud1.svg" alt="Cloud"/>
     <img class="cloud-2" src="../public/cloud1.svg" alt="Cloud"/>
-    <p class="mobile-disclaimer">Mobile version coming soon! 🙌 </p>
+    <p class="mobile-disclaimer">Mobile version </br> coming soon! 🙌 </p>
   </section>
   <script src="../public/index.js"></script>
 </body>
