--- a/public/style.css
+++ b/public/style.css
@@ -162,10 +162,12 @@ button:focus {
 @media only screen and (max-width: 600px) {
   .mobile-disclaimer {
     display: block;
+    text-align: center;
     position: absolute;
-    top: 70%;
-    left: 35%;
-    width: 30%;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    margin-left: -94px;
     background-color: white;
     padding: 1em;
     border-radius: 5px;
